--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -10580,6 +10580,24 @@ blockquote {
   .accordion li {
     padding: 7px 45px !important;
   }
+  .section-title {
+    font-size: 23px !important;
+    line-height: 38px;
+  }
+.section-subtitle {
+  font-size: 14px !important;
+}
+.swiper-slide.dr-block a {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.swiper-slide.dr-block .dr-block-name {
+    font-size: 13px !important;
+    left: 50% !important;
+    transform: translateX(-50%) !important;
+    line-height: 19px !important;
+}
 }
 
 @media screen and (max-width: 529px ){
