--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -4288,6 +4288,7 @@ blockquote {
 }
 
 .classes-details-section {
+  position: relative;
   padding-top: 89px;
   padding-bottom: 100px;
 }
@@ -14037,4 +14038,75 @@ input[type="radio"] {
 
 .no-infos-alert p {
   color: rgb(179, 179, 179);
+}
+
+.page-wrapper {
+  position: relative;
+}
+
+.sticky-buy-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--off-white-bg-color);
+  position: sticky !important;
+  width: 100%;
+  height: 100px;
+  bottom:0;
+  left: 0;
+  z-index: 1000;
+  padding: 20px 50px;
+  box-shadow: 0px -5px 10px #00000017;
+}
+
+.sticky-buy-block .sticky-buy-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 1344px;
+}
+
+.sticky-buy-block .sticky-buy-title {
+    font-size: 28px;
+    font-weight: 800;
+}
+
+.sticky-buy-block .sticky-help {
+    font-weight: 500;
+  font-size: 14px;
+}
+
+.sticky-buy-block .sticky-help span {
+    text-decoration: underline;
+      color: #f94f92;
+}
+
+.sticky-buy-block .sticky-buy-title p {
+  color: var(--gray-clr);
+  font-weight: 500;
+  margin-bottom: 0 !important;
+}
+
+.sticky-buy-block .sticky-buy-title p span {
+  text-decoration: underline;
+}
+
+.sticky-buy-block .sticky-buy-title p .span-one {
+  color: #f94f92;
+}
+
+.sticky-buy-block .sticky-buy-title p .span-two {
+  color: #ff5555;
+}
+
+.sticky-buy-block .sticky-buy-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--orange-clr);
+    padding: 10px 40px;
+    border-radius: 50px;
+    color: var(--gray-bg-color);
+    font-weight: 600;
+    cursor: pointer;
 }
