--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -12089,6 +12089,7 @@ header {
   line-height: 28px;
   font-weight: 600;
   margin: 10px 0;
+  min-height: 57px;
 }
 
 .information-wrap:hover .i-title {
